 * #900: Fix for a potential traceback (TypeError) during the handling of another error.
 * #904: Clarify the configuration reference about the "spot" check options:
   https://torsion.org/borgmatic/docs/reference/configuration/
 * #905: Fix the "source_directories_must_exist" option to work with relative "source_directories"
   paths when a "working_directory" is set.
 * Fix a regression in which the "color" option had no effect.
 * Add a recent contributors section to the documentation, because credit where credit's due! See:
   https://torsion.org/borgmatic/#recent-contributors

1.8.13
 * #298: Add "delete" and "rdelete" actions to delete archives or entire repositories.
 * #785: Add an "only_run_on" option to consistency checks so you can limit a check to running on
   particular days of the week. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/deal-with-very-large-backups/#check-days
 * #885: Add an Uptime Kuma monitoring hook. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#uptime-kuma-hook
 * #886: Fix a PagerDuty hook traceback with Python < 3.10.
 * #889: Fix the Healthchecks ping body size limit, restoring it to the documented 100,000 bytes.

1.8.12
 * #817: Add a "--max-duration" flag to the "check" action and a "max_duration" option to the
   repository check configuration. This tells Borg to interrupt a repository check after a certain
   duration.
 * #860: Fix interaction between environment variable interpolation in constants and shell escaping.
 * #863: When color output is disabled (explicitly or implicitly), don't prefix each log line with
   the log level.
 * #865: Add an "upload_buffer_size" option to set the size of the upload buffer used in "create"
   action.
 * #866: Fix "Argument list too long" error in the "spot" check when checking hundreds of thousands
   of files at once.