@@ -229,10 +229,10 @@ hooks:
 
 ... where `my_pg_container` is the name of your database container. In this
 example, you'd also need to set the `pg_restore_command` and `psql_command`
-options. If you choose to use the `pg_dump` within the container though,
-note that it tries to output the backup to a file inside the container.
-So you'll have to mount the `.borgmatic` folder inside your home folder
-with the same directory structure inside the container.
+options. If you choose to use the `pg_dump` command within the container
+though, note that it will output the database dump to a file inside the
+container. So you'll have to mount the `.borgmatic` folder from your host's
+home folder into the container using the same directory structure.
 
 See the following Docker compose file an as example:
 
