@@ -8,6 +8,9 @@
    https://torsion.org/borgmatic/docs/reference/configuration/
  * #905: Fix the "source_directories_must_exist" option to work with relative "source_directories"
    paths when a "working_directory" is set.
+ * #906: Add documentation details for how to run custom database dump commands using binaries from
+   running containers:
+   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#containers
  * Fix a regression in which the "color" option had no effect.
  * Add a recent contributors section to the documentation, because credit where credit's due! See:
    https://torsion.org/borgmatic/#recent-contributors
